# chat-bot-automation

./: README.md
chat-api/: Cargo.toml  Readme.md
chat-api/src/: main.rs
chroma_data/: chroma.sqlite3
rag-engine/: .env.example  .gitignore  Readme.md  debug_test.http  pyproject.toml  requests.http
rag-engine/scripts/: run_server.py  setup.py
rag-engine/src/: main.py
rag-engine/src/core/: config.py  models.py  rag_engine.py
rag-engine/src/embeddings/openai/: service.py
rag-engine/src/retrieval/: document_processor.py
rag-engine/src/vectordb/chromadb/: client.py
