[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-engine"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system built with LangChain"
readme = "Readme.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "unstructured>=0.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true